[package]
name = "cvrdt-exposition"
version = "0.1.5"
authors = ["genos <graham.enos@gmail.com>"]
edition = "2018"
description = "Understanding Convergent Replicated Data Types"
license = "MIT"
homepage = "https://docs.rs/cvrdt-exposition/"
readme = "README.md"
repository = "https://github.com/genos/cvrdt-exposition"
keywords = ["crdt", "data-structures", "distributed-systems", "exposition"]

[dependencies]

[dev-dependencies]
proptest = "1.0.0"
