[package]
name = "cvrdt-exposition"
version = "0.2.0"
authors = ["genos <graham.enos@gmail.com>"]
edition = "2021"
description = "Understanding Convergent Replicated Data Types"
license = "MIT"
homepage = "https://docs.rs/cvrdt-exposition/"
readme = "README.md"
repository = "https://github.com/genos/cvrdt-exposition"
keywords = ["crdt", "data-structures", "distributed-systems", "exposition"]

[dev-dependencies]
proptest = "1.3.1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
